# programming-concepts

./: .gitignore  CMakeLists.txt  README.md  programming-concepts.cpp
.github/workflows/: cmake-single-platform.yml
binary-tree/: binary-tree.hpp  binary-tree.inl  main.cpp
circular-buffer/: circular-buffer.hpp  circular-buffer.inl  main.cpp
cmake/shared-library/: CMakeLists.txt  functions.cpp  main.cpp  shared-library.md
cmake/shared-library/lib/: CMakeLists.txt
cmake/simple-executable/: CMakeLists.txt  main.cpp  simple-executable.md
cmake/simple-executable/static-library/: main.cpp
cmake/static-library/: CMakeLists.txt  functions.hpp  functions.inl  main.cpp  static-library.md
data-structures/doubly-linked-list-queue/: main.cpp
data-structures/general-queue/: general-queue.hpp  main.cpp
data-structures/general-stack/: general-stack.hpp  general-stack.inl
data-structures/link-list-stack/: linked-list-stack.hpp  main.cpp
data-structures/singly-linked-list/: singly-linked-list.cpp  singly-linked-list.inl
doubly-circular-linked-list/: doubly-circular-linked-list.hpp  doubly-circular-linked-list.inl  main.cpp
doubly-linked-list/: doubly-linked-list-test.cpp  doubly-linked-list-test.hpp  doubly-linked-list.cpp  doubly-linked-list.hpp  doubly-linked-list.inl  main.cpp
doubly-linked-list-queue/: doubly-linked-list-queue.hpp
function-templates/: function-templates.cpp  function-templates.hpp
general-queue/: general-queue.inl
general-stack/: main.cpp
inheritance/: inheritance.cpp  inheritance.hpp  main.cpp
insertion-sort/: insertion-sort.cpp  insertion-sort.hpp
link-list-stack/: linked-list-stack.inl
linked-lists/doubly-linked-list/: doubly-linked-list.hpp
linked-lists/singly-circular-linked-list/: main.cpp
linked-lists/singly-linked-list/: main.cpp
merge-sort-iterative/: mergeSort.hpp
polymorphism/: CMakeLists.txt  main.cpp  polymorphism.cpp  polymorphism.hpp
programming-concepts-tests/: doubly-linked-list-test.cpp  doubly-linked-list-test.hpp  heap-tests.cpp  heap-tests.hpp  insertion-sort-tests.cpp  pch.h  programming-concepts-tests.sln  programming-concepts-tests.vcxproj  singly-cirular-linked-list-test.cpp  singly-cirular-linked-list-test.hpp  singly-linked-list-test.cpp  singly-linked-list-test.hpp  sorting-tests.cpp  sorting-tests.hpp
programming-concepts-tests/programm.3628696c/x64/Debug/: programming-concepts-tests.exe.recipe  programming-concepts-tests.vcxproj.FileListAbsolute.txt
programming-concepts-tests/programm.3628696c/x64/Debug/programm.3628696c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  programming-concepts-tests.lastbuildstate
programming-concepts-tests/programm.3628696c/x64/Release/: programming-concepts-tests.exe.recipe  programming-concepts-tests.vcxproj.FileListAbsolute.txt
programming-concepts-tests/programm.3628696c/x64/Release/programm.3628696c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  programming-concepts-tests.lastbuildstate
programming-concepts-tests/x64/Debug/: programming-concepts-tests.exe.gta.testdurations
quicksort/: quicksort.hpp  quicksortTests.cpp
ring-buffer/: main.cpp  ring-buffer.hpp  ring-buffer.inl
selection-sort/: selection-sort.cpp  selection-sort.hpp
singly-circular-linked-list/: singly-circular-linked-list.hpp  singly-circular-linked-list.inl
singly-linked-list/: main.cpp  singly-linked-list.cpp  singly-linked-list.hpp  singly-linked-list.inl
skip-list/: main.cpp  skip-list.hpp  skip-list.inl
sorting/: heap.cpp  heap.hpp  sorting.cpp  sorting.hpp
sorting/merge-sort-iterative/: mergeSort.cpp  mergeSortTests.cpp
sorting/min-heap/: min-heap.cpp  min-heap.hpp
sorting/quicksort/: quicksort.cpp
stacks-and-queues/doubly-linked-list-queue/: doubly-linked-list-queue.inl
tests/: doubly-linked-list-test.cpp  doubly-linked-list-test.hpp  linked-list-test.cpp  linked-list-test.hpp  singly-linked-list-test.cpp  singly-linked-list-test.hpp  tests.sln  tests.vcxproj
tests/tests/x64/Debug/: tests.exe.recipe  tests.vcxproj.FileListAbsolute.txt
tests/tests/x64/Debug/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  tests.lastbuildstate
tests/x64/Debug/: tests.exe.recipe  tests.vcxproj.FileListAbsolute.txt
tests/x64/Debug/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  tests.lastbuildstate
threaded-binary-tree/: main.cpp  threaded-binary-tree.hpp  threaded-binary-tree.inl
